@@ -32,5 +32,6 @@
     <orderEntry type="module" module-name="join" />
     <orderEntry type="module" module-name="sandbox" />
     <orderEntry type="module" module-name="backward-codecs" />
+    <orderEntry type="module" module-name="codecs" />
   </component>
 </module>
