@@ -1,0 +1,374 @@
+begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+
+begin_package
+DECL|package|org.apache.solr.core
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|core
+package|;
+end_package
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|IndexWriter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|SegmentInfo
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|SegmentInfos
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|SolrTestCaseJ4
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|search
+operator|.
+name|SolrIndexSearcher
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|util
+operator|.
+name|RefCounted
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|BeforeClass
+import|;
+end_import
+
+begin_class
+DECL|class|TestSimpleTextCodec
+specifier|public
+class|class
+name|TestSimpleTextCodec
+extends|extends
+name|SolrTestCaseJ4
+block|{
+annotation|@
+name|BeforeClass
+DECL|method|beforeClass
+specifier|public
+specifier|static
+name|void
+name|beforeClass
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|initCore
+argument_list|(
+literal|"solrconfig_SimpleTextCodec.xml"
+argument_list|,
+literal|"schema-SimpleTextCodec.xml"
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|test
+specifier|public
+name|void
+name|test
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SolrConfig
+name|config
+init|=
+name|h
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getSolrConfig
+argument_list|()
+decl_stmt|;
+name|String
+name|codecFactory
+init|=
+name|config
+operator|.
+name|get
+argument_list|(
+literal|"codecFactory/@class"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Unexpected solrconfig codec factory"
+argument_list|,
+literal|"solr.SimpleTextCodecFactory"
+argument_list|,
+name|codecFactory
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Unexpected core codec"
+argument_list|,
+literal|"SimpleText"
+argument_list|,
+name|h
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getCodec
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|RefCounted
+argument_list|<
+name|IndexWriter
+argument_list|>
+name|writerRef
+init|=
+name|h
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getSolrCoreState
+argument_list|()
+operator|.
+name|getIndexWriter
+argument_list|(
+name|h
+operator|.
+name|getCore
+argument_list|()
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|IndexWriter
+name|writer
+init|=
+name|writerRef
+operator|.
+name|get
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Unexpected codec in IndexWriter config"
+argument_list|,
+literal|"SimpleText"
+argument_list|,
+name|writer
+operator|.
+name|getConfig
+argument_list|()
+operator|.
+name|getCodec
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|writerRef
+operator|.
+name|decref
+argument_list|()
+expr_stmt|;
+block|}
+name|assertU
+argument_list|(
+name|add
+argument_list|(
+name|doc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"text"
+argument_list|,
+literal|"textual content goes here"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|RefCounted
+argument_list|<
+name|SolrIndexSearcher
+argument_list|>
+name|searcherRef
+init|=
+name|h
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getSearcher
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+name|SolrIndexSearcher
+name|searcher
+init|=
+name|searcherRef
+operator|.
+name|get
+argument_list|()
+decl_stmt|;
+name|SegmentInfos
+name|infos
+init|=
+name|SegmentInfos
+operator|.
+name|readLatestCommit
+argument_list|(
+name|searcher
+operator|.
+name|getIndexReader
+argument_list|()
+operator|.
+name|directory
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|SegmentInfo
+name|info
+init|=
+name|infos
+operator|.
+name|info
+argument_list|(
+name|infos
+operator|.
+name|size
+argument_list|()
+operator|-
+literal|1
+argument_list|)
+operator|.
+name|info
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Unexpected segment codec"
+argument_list|,
+literal|"SimpleText"
+argument_list|,
+name|info
+operator|.
+name|getCodec
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|searcherRef
+operator|.
+name|decref
+argument_list|()
+expr_stmt|;
+block|}
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:1"
+argument_list|)
+argument_list|,
+literal|"*[count(//doc)=1]"
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+end_class
+
+end_unit
+
